# ml_end_to_end_26

./: README.md  app.py  constants.py  inference.py  main.py  pyproject.toml  train.py
model/: iris_model.joblib
